# neoadi

./: README.md
CodeCrafter/: main.py  package-lock.json  package.json  pyproject.toml  replit.nix
CodeCrafter/attached_assets/: Pasted-SETUP-pip-install-r-requirements-txt-create-env-file-and-put-value-bot-env-my-bot-token-wi-1739452954862.txt  Pasted-Test-Payment-Cards-A-list-of-available-test-payment-cards-for-various-payment-gateways-Please-feel-1739594319969.txt  Pasted-main-py-import-telebot-import-os-import-time-import-requests-from-dotenv-import-load-dotenv-load-do-1739452704315.txt  Pasted-mport-everything-https-github-com-hndko-CCEXTRAP-blob-master-gitattributes-https-github-co-1739607129990.txt
CodeCrafter/bot/: __init__.py  cc_extrapolator.py  cc_utils.py  config.py  gate_checker.py  gift_card_manager.py  handlers.py  netflix_checker.py  otp_bypass.py  rate_limiter.py  secure_handler.py  session.py  sms_checker.py  smtp_checker.py  social_scraper.py  utils.py  validators.py  vbv_checker.py
CodeCrafter/configs/: tokens.py  values.py
CodeCrafter/core/: bincheck.py  extrapolation.py  validcc.py
CodeCrafter/gates/: checker.py
CodeCrafter/tests/: test_extrapolation.py
CodeCrafter/tools/: gift_card_manager.py  smtp_checker.py
